removed implicit wait

--- a/src/main/resources/testData.properties
+++ b/src/main/resources/testData.properties
@@ -1,8 +1,11 @@
-gender = male
+app_url="http://automationpractice.com/index.php"
+gender=male
 existingEmail=hf_challenge_123456@hf12345.com
+existinguserLName = Black
+existinguserFName = Joe
 password=12345678
-fName=First_Name
-lName=Last_Name
+fName=FirstName
+lName=LastName
 company=Company
 address1=address1
 address2=address2
@@ -13,10 +16,7 @@ addInfo=more_info
 homePhone=1234556777
 mobileNo=9876543212
 aliasAddres=com/hf
-
-dressName = Faded Short Sleeve T-shirts
-
-
-myaccountURL = controller=my-account
-orderconfirmationurl = controller=order-confirmation
+dressName=Faded Short Sleeve T-shirts
+myaccountURL=controller=my-account
+orderconfirmationurl=controller=order-confirmation
 
